--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My Portfolio Site</title>
-  <link rel="stylesheet" href="index.css">
-</head>
-<body>
-  <h1>Tom's Portfolio Site</h1>
-  <p>Welcome to my website. Please enjoy your stay. The crisps are over there.</p>
-  <h2>Past Experience</h2>
-  <ul>
-    <li>Northcoders Tutor. 2018 - present</li>
-    <li>Northcoders Student. April 2018 - August 2018</li>
-  </ul>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>My Portfolio Site</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <h1 id="title">Tom's Portfolio Site</h1>
+    <p>
+      Welcome to my website. Please enjoy your stay. The crisps are over there.
+    </p>
+    <h2>Past Experience</h2>
+    <ul>
+      <li>Northcoders Tutor. 2018 - present</li>
+      <li>Northcoders Student. April 2018 - August 2018</li>
+    </ul>
+  </body>
 </html>
