--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1 id="title">Tom's Portfolio Site</h1>
+    <h1 class="title">Tom's Portfolio Site</h1>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
     <p>
       Welcome to my website. Please enjoy your stay. The crisps are over there.
     </p>
